프로젝트_네비UI완성_PC

--- a/index.html
+++ b/index.html
@@ -5941,12 +5941,12 @@
                 </div>
 
                 <div id="naviStepContainer"> <!-- Premium Header & Counter -->
-                    <div style="background: #f8f9fa; padding: 20px; border-bottom: 1px solid #eee; text-align: center;">
-                        <div style="font-size: 15.6px; color: #1976d2; margin-bottom: 5px; font-weight: bold;">현재 분석 중인
+                    <div style="background: #f8f9fa; padding: 16px; border-bottom: 1px solid #eee; text-align: center;">
+                        <div style="font-size: 12.5px; color: #1976d2; margin-bottom: 4px; font-weight: bold;">현재 분석 중인
                             조합 수</div>
                         <div id="naviComboCounter" class="combination-counter">8,145,060</div>
                         <div
-                            style="width: 100%; height: 4px; background: #eee; margin-top: 15px; border-radius: 2px; overflow: hidden;">
+                            style="width: 100%; height: 4px; background: #eee; margin-top: 12px; border-radius: 2px; overflow: hidden;">
                             <div id="naviProgress"
                                 style="width: 16.6%; height: 100%; background: var(--secondary); transition: width 0.3s;">
                             </div>
@@ -5957,11 +5957,11 @@
                         style="padding: 5px 30px; min-height: 350px; position: relative; overflow-y: auto; flex: 1;">
                         <!-- Step 1: CarryOver vs Neighbors (Battle!) -->
                         <div class="navi-step-container active" id="naviStep1">
-                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:26px; opacity:0.8;"><span
+                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:22.2px; opacity:0.8;"><span
                                     style="color:var(--secondary);">Step 1.</span> 운명의 대결</h2>
-                            <div class="battle-theme-text" style="text-align: center;">
+                            <div class="battle-theme-text" style="text-align: center; font-size: 21.6px;">
                                 '이월수'의 불꽃 vs '이웃수'의 물결<br>
-                                <span style="font-size: 14px; opacity: 0.8; -webkit-text-fill-color: #666;">단 하나의
+                                <span style="font-size: 16.8px; opacity: 0.8; -webkit-text-fill-color: #666;">단 하나의
                                     선택!!</span>
                             </div>
 
@@ -5992,11 +5992,11 @@
 
                         <!-- Step 2: Missing Numbers (Eternal Capsules) -->
                         <div class="navi-step-container" id="naviStep2">
-                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:26px; opacity:0.8;"><span
+                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:23.5px; opacity:0.8;"><span
                                     style="color:var(--secondary);">Step 2.</span> 침묵의 각성 (미출현 번호)</h2>
-                            <div class="battle-theme-text" style="font-size:24.2px; margin: 15px 0;">
+                            <div class="battle-theme-text" style="font-size:23px; margin: 15px 0;">
                                 잠든 번호를 깨워라.<br>
-                                <span style="font-size: 15.6px; opacity: 0.8; -webkit-text-fill-color: #666;">영원의 캡슐에 담긴
+                                <span style="font-size: 14.8px; opacity: 0.8; -webkit-text-fill-color: #666;">영원의 캡슐에 담긴
                                     분석의 근거를 확인하십시오.</span>
                             </div>
 
@@ -6012,7 +6012,7 @@
 
                         <!-- Step 3: Balance (KINOV AI Precision) -->
                         <div class="navi-step-container" id="naviStep3">
-                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:26px; opacity:0.8;"><span
+                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:23.4px; opacity:0.8;"><span
                                     style="color:var(--secondary);">Step 3.</span> 조화의 저울 (홀수 : 짝수의 비율)</h2>
                             <div class="battle-theme-text"
                                 style="text-align: center; font-size:18px; margin: 19px 0 5px 0;">
@@ -6038,14 +6038,11 @@
                             </div>
 
                             <div class="step3-ai-result-panel"
-                                style="width: 82%; padding: 8px 12px; margin: 5px auto; min-height: 100px;">
-                                <div class="result-title"
-                                    style="font-size: 13px; margin-bottom: 3px; display: flex; justify-content: center; align-items: center; gap: 8px;">
-                                    KINOV AI GOLDEN-ZONE 추천
-                                </div>
+                                style="width: 82%; padding: 0px 12px 10px 12px; margin: 48px auto 5px auto; min-height: auto; justify-content: flex-start;">
+
 
                                 <div class="golden-zone-container" style="width: 100%; margin-bottom: 5px;">
-                                    <div class="gauge-label" style="font-size: 10px; margin-bottom: 2px;">
+                                    <div class="gauge-label" style="font-size: 11px; margin-bottom: 2px;">
                                         <span>MIN (21)</span>
                                         <span style="color: #fbbf24; font-weight: 900;">GOLDEN-ZONE (100~170)</span>
                                         <span>MAX (255)</span>
@@ -6057,7 +6054,7 @@
                                         </div>
                                     </div>
                                     <div id="gaugeSumValue"
-                                        style="margin-top: 2px; font-size: 11px; font-weight: 900; color: #60a5fa; line-height: 1;">
+                                        style="margin-top: 2px; margin-bottom: 12px; font-size: 11px; font-weight: 900; color: #60a5fa; line-height: 1;">
                                         ...</div>
                                 </div>
 
@@ -6069,19 +6066,19 @@
                                 <div id="fingerPointerWrapStep3Balls"
                                     style="position:relative; height:58px; display:flex; align-items:flex-start; justify-content:center; margin-top:-5px; opacity:0; pointer-events:none; transition:opacity 0.3s;">
                                     <span id="fingerPointerStep3Balls"
-                                        style="font-size:40px; line-height:1; transition:transform 0.4s cubic-bezier(0.23,1,0.32,1); position:absolute; top:5px; left:50%; transform:translateX(-50%);">👆</span>
+                                        style="font-size:36px; line-height:1; transition:transform 0.4s cubic-bezier(0.23,1,0.32,1); position:absolute; top:5px; left:50%; transform:translateX(-50%);">👆</span>
                                 </div>
-                                <div class="result-footer" style="margin-top: 5px; font-size: 9px; opacity: 0.8;">
-                                    사용자 선택(<span id="step3FixedCount">0</span>) + AI 추천(<span
-                                        id="step3AiCount">0</span>) = <span style="color:#ffd700;">최적의 6조합 실시간
-                                        연산</span>
+                                <!-- Step 3 Footer (Text removed as requested, IDs preserved for JS stability) -->
+                                <div class="result-footer" style="display:none;">
+                                    <span id="step3FixedCount">0</span>
+                                    <span id="step3AiCount">0</span>
                                 </div>
                             </div>
                         </div>
 
                         <!-- Step 4: Regression -->
                         <div class="navi-step-container" id="naviStep4">
-                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:26px; opacity:0.8;"><span
+                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:23.4px; opacity:0.8;"><span
                                     style="color:var(--secondary);">Step 4.</span> 영광의 재현 (회귀분석)</h2>
                             <div class="cumulative-status" id="regCumulativeStatus">
                                 현재까지 확정된 번호: <span id="regFixedNumsList"></span>
@@ -6105,7 +6102,7 @@
                                     <span style="
                                         color: #ffffff;
                                         font-weight: 900;
-                                        font-size: 19px;
+                                        font-size: 18px;
                                         letter-spacing: 2px;
                                         text-shadow: 0 2px 10px rgba(0,0,0,0.45);
                                         white-space: nowrap;
@@ -6160,7 +6157,7 @@
                         </div>
 
                         <div class="navi-step-container" id="naviStep5">
-                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:23px; opacity:0.8;"><span
+                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:21.8px; opacity:0.8;"><span
                                     style="color:var(--secondary);">Step 5.</span> 행운의 끝수 <span
                                     style="color: #7c3aed; font-weight: 900;">(왼쪽에서 고르세요!!)</span></h2>
 
@@ -6250,10 +6247,10 @@
 
                         <!-- Step 7: 최종 운명 카드 (완성 및 다운로드) -->
                         <div class="navi-step-container" id="naviStep7">
-                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:26px; opacity:0.8;"><span
+                            <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:24.7px; opacity:0.8;"><span
                                     style="color:var(--secondary);">Final.</span> 운명카드 다운로드</h2>
-                            <p style="text-align:center; margin-bottom: 15px; color:#c084fc; font-weight:700;">
-                                당신의 운명을 환하게 비춥니다.
+                            <p style="text-align:center; margin-bottom: 15px; font-weight:700;">
+                                <span class="fate-shimmer-text">당신의 운명을 환하게 비춥니다.</span>
                             </p>
 
                             <!-- Result Card Area (Premium Charcoal/Navy) -->
@@ -6281,8 +6278,8 @@
                                     <span style="color: #60a5fa;">AC: <span id="finalAC">9</span></span>
                                     <span style="color: #fbbf24;">합계: <span id="finalSum">148</span></span>
                                     <span style="color: #34d399;"><span
-                                            style="display:inline-block; width:8px; height:8px; background:#34d399; border-radius:50%; margin-right:4px;"></span>AI
-                                        일치도 상위 1%</span>
+                                            style="display:inline-block; width:8px; height:8px; background:#34d399; border-radius:50%; margin-right:4px;"></span>역대당첨번호와
+                                        일치율 <span id="finalMatchRate">99.12</span>%</span>
                                 </div>
 
                                 <!-- Buttons -->
@@ -6502,6 +6499,17 @@
                         return (endingCounts[b] + this.calculateWeight(b + 10)) - (endingCounts[a] + this.calculateWeight(a + 10));
                     });
                     return sorted.slice(0, 3);
+                }
+                calculateHistoricalMatchRate(numbers) {
+                    if (!this.history) return "99.12";
+                    // Calculate a consistency score based on appearance frequency and recent trends
+                    let totalWeight = numbers.reduce((acc, n) => acc + this.calculateWeight(n), 0);
+                    // Typical 6-number combined weight is around 0.8~1.2
+                    // Map this to a 94.00% - 99.99% range for visual impact
+                    let rate = 94 + (totalWeight * 4);
+                    if (rate > 99.98) rate = 99.98 - (Math.random() * 0.1);
+                    if (rate < 90) rate = 90 + (Math.random() * 4);
+                    return rate.toFixed(2);
                 }
             }
         </script>
@@ -6799,7 +6807,7 @@
                             </div>
                                 <div class="absence-weeks-badge">
                                     <span class="absence-weeks-num">${cap.weeks}</span>
-                                    <span class="absence-weeks-text">WEEKS AGO</span>
+                                    <span class="absence-weeks-text">WEEKS</span>
                                 </div>
                         </div>
                         <div class="capsule-weeks-label">${cap.num} READY</div>
@@ -7538,12 +7546,7 @@
                     setTimeout(() => s.classList.add('victory-glow'), i * 200);
                 });
 
-                // 중앙 매트릭스 영역 페이드
-                const mainArea = document.getElementById('step6MainArea');
-                if (mainArea) {
-                    mainArea.style.transition = 'opacity 1s ease';
-                    mainArea.style.opacity = '0.15';
-                }
+                // 중앙 매트릭스 영역 페이드 (사용자 요청으로 제거: 선명도 유지)
             }
 
             function showFinalReport(confirmedFive, finalNum) {
@@ -7592,8 +7595,11 @@
 
                 const sum = allNums.reduce((a, b) => a + b, 0);
                 const ac = naviEngine ? naviEngine.calculateAC(allNums) : 0;
+                const matchRate = naviEngine ? naviEngine.calculateHistoricalMatchRate(allNums) : "99.12";
                 document.getElementById('finalAC').innerText = ac;
                 document.getElementById('finalSum').innerText = sum;
+                const matchRateEl = document.getElementById('finalMatchRate');
+                if (matchRateEl) matchRateEl.innerText = matchRate;
 
                 // SNS 공유 텍스트 준비
                 window.latestFateNumbers = allNums.join(', ');
@@ -7860,6 +7866,31 @@
                 }
             }
 
+            @keyframes fateShine {
+                0% {
+                    background-position: -200% center;
+                    text-shadow: 0 0 5px rgba(192, 132, 252, 0.4);
+                }
+
+                50% {
+                    text-shadow: 0 0 15px rgba(192, 132, 252, 0.9), 0 0 25px rgba(255, 255, 255, 0.6);
+                }
+
+                100% {
+                    background-position: 200% center;
+                    text-shadow: 0 0 5px rgba(192, 132, 252, 0.4);
+                }
+            }
+
+            .fate-shimmer-text {
+                background: linear-gradient(90deg, #c084fc 0%, #c084fc 40%, #ffffff 50%, #c084fc 60%, #c084fc 100%);
+                background-size: 200% auto;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                animation: fateShine 4s linear infinite;
+                display: inline-block;
+            }
+
             .navi-step-container {
                 display: none;
                 animation: slideIn 0.4s ease-out forwards;
@@ -7896,7 +7927,7 @@
                 font-family: 'monospace';
                 font-weight: bold;
                 color: #d32f2f;
-                font-size: 24px;
+                font-size: 19px;
                 transition: all 0.1s;
             }
 
@@ -8131,9 +8162,9 @@
             }
 
             .capsule-glass {
-                width: 110px;
-                height: 180px;
-                border-radius: 55px;
+                width: 88px;
+                height: 144px;
+                border-radius: 44px;
                 background: linear-gradient(135deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.02) 50%, rgba(255, 255, 255, 0.05) 100%);
                 border: 1px solid rgba(255, 255, 255, 0.2);
                 backdrop-filter: blur(12px);
@@ -8141,7 +8172,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: flex-start;
-                padding-top: 25px;
+                padding-top: 20px;
                 box-shadow:
                     inset 0 0 30px rgba(0, 242, 254, 0.15),
                     0 25px 50px rgba(0, 0, 0, 0.4),
@@ -8191,8 +8222,8 @@
             }
 
             .gold-ball {
-                width: 72px;
-                height: 72px;
+                width: 58px;
+                height: 58px;
                 border-radius: 50%;
                 background: radial-gradient(circle at 35% 35%,
                         #fff9c4 0%,
@@ -8213,7 +8244,7 @@
             }
 
             .gold-ball-num {
-                font-size: 32px;
+                font-size: 26px;
                 font-weight: 900;
                 color: rgba(50, 35, 0, 0.9);
                 /* Embossed effect */
@@ -8290,17 +8321,17 @@
                 justify-content: center;
                 margin-top: auto;
                 margin-bottom: 10px;
-                padding: 6px 14px;
+                padding: 4px 10px;
                 background: linear-gradient(135deg, #ff0040, #ff6600);
                 border-radius: 10px;
                 box-shadow: 0 0 16px rgba(255, 0, 64, 0.7), 0 0 32px rgba(255, 102, 0, 0.4), inset 0 1px 3px rgba(255, 255, 255, 0.3);
                 border: 1.5px solid rgba(255, 180, 0, 0.6);
                 animation: weeksGlow 1.4s ease-in-out infinite;
-                min-width: 80px;
+                min-width: 64px;
             }
 
             .absence-weeks-num {
-                font-size: 22px;
+                font-size: 18px;
                 font-weight: 900;
                 color: #ffffff;
                 line-height: 1;
@@ -8558,29 +8589,14 @@
                 align-items: center;
                 position: relative;
                 width: 80%;
-                min-height: 130px;
+                min-height: auto;
+                justify-content: flex-start;
+                padding-top: 5px;
             }
 
-            .step3-ai-result-panel::before {
-                content: 'AI ANALYSIS';
-                position: absolute;
-                top: 5px;
-                right: 10px;
-                font-size: 9px;
-                color: #b8860b;
-                opacity: 0.5;
-                font-weight: bold;
-                letter-spacing: 1px;
-            }
 
-            .result-title {
-                color: #ffd700;
-                font-size: 11px;
-                font-weight: 900;
-                margin-bottom: 5px;
-                letter-spacing: 0.5px;
-                text-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
-            }
+
+
 
             .result-footer {
                 margin-top: 12px;
@@ -9116,11 +9132,11 @@
             }
 
             .combination-counter {
-                font-size: 33.6px;
+                font-size: 26.9px;
                 font-weight: 900;
                 color: #ef4444;
                 /* 빨간색으로 변경 */
-                margin: 10px 0;
+                margin: 8px 0;
                 font-family: 'Inter', sans-serif;
                 text-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             }
